--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Surplus implementation of TodoMVC",
   "scripts": {
     "dev": "webpack -w",
-    "prod": "webpack -p"
+    "start": "NODE_ENV=development webpack-dev-server --hot --inline --progress --open",
+    "prod": "NODE_ENV=production webpack"
   },
   "keywords": [
     "s.js",
@@ -34,9 +35,13 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.0",
+    "compression-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.30.1",
     "surplus-loader": "^0.5.0-beta2",
     "ts-loader": "^2.1.0",
     "typescript": "2.3.2",
-    "webpack": "^2.6.1"
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.9.3"
   }
 }
